feat: implement crowdstrike_content_update_policy resource
Add comprehensive content update policy management with support for:
- All content categories (sensor operations, system critical, vulnerability management, rapid response)
- Ring assignment configurations (GA, EA, pause) with delay hour controls
- Host group attachments and management
- Policy enable/disable state management

Includes extensive test coverage, documentation, and usage examples.
Also enhances test infrastructure with optional environment variables for more flexible testing.

--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,11 @@ website/node_modules
 .idea
 *.iml
 *.test
-*.iml
+*.
+.clinerules/
 
 website/vendor
+.clineignore
 
 # Test exclusions
 !command/test-fixtures/**/*.tfstate
